--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+asgiref==3.5.2
+autopep8==1.7.0
 Django==3.0.5
+sqlparse==0.4.2
+pycodestyle==2.9.1
 dj-database-url==0.5.0
-pip==20.0.2
 psycopg2==2.8.5
 pytz==2019.3
 setuptools==46.1.3
@@ -10,4 +13,5 @@ gunicorn==20.0.4
 whitenoise==5.0.1
 reportlab==3.5.42
 requests~=2.24.0
+toml==0.10.2
 XlsxWriter==1.4.1
