--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,9 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+# Environments Variables
+.env
+
 # Distribution / packaging
 # Environments
 .env/
