--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 asgiref==3.5.2
 autopep8==1.7.0
-Django==3.0.5
-sqlparse==0.4.2
-pycodestyle==2.9.1
+certifi==2024.7.4
+chardet==3.0.4
 dj-database-url==0.5.0
-psycopg2==2.8.5
-pytz==2019.3
-setuptools==46.1.3
-wheel==0.34.2
-Pillow==7.1.1
+Django==3.0.5
 gunicorn==20.0.4
-whitenoise==5.0.1
+idna==2.10
+Pillow==7.1.1
+psycopg2==2.8.5
+pycodestyle==2.9.1
+python-dotenv==1.0.1
+pytz==2019.3
 reportlab==3.5.42
-requests~=2.24.0
+requests==2.24.0
+sqlparse==0.4.2
 toml==0.10.2
+urllib3==1.25.11
+whitenoise==5.0.1
 XlsxWriter==1.4.1
