--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,34 @@
-asgiref==3.5.2
+asgiref==3.8.1
 autopep8==1.7.0
+backports.zoneinfo==0.2.1
+boto3==1.35.5
+botocore==1.35.5
 certifi==2024.7.4
 chardet==3.0.4
+distlib==0.3.8
 dj-database-url==0.5.0
-Django==3.0.5
+Django==4.2.15
+django-storages==1.14.4
+filelock==3.15.4
 gunicorn==20.0.4
 idna==2.10
+jmespath==1.0.1
 Pillow==7.1.1
+platformdirs==4.2.2
 psycopg2==2.8.5
 pycodestyle==2.9.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2019.3
 reportlab==3.5.42
 requests==2.24.0
+s3transfer==0.10.2
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
+typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==1.25.11
+virtualenv==20.26.3
 whitenoise==5.0.1
 XlsxWriter==1.4.1
