--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,30 @@
-asgiref==3.8.1
+asgiref==3.5.2
 autopep8==1.7.0
-backports.zoneinfo==0.2.1
-boto3==1.35.5
-botocore==1.35.5
+boto3==1.12.11
+botocore==1.15.49
 certifi==2024.7.4
 chardet==3.0.4
-distlib==0.3.8
 dj-database-url==0.5.0
-Django==4.2.15
-django-storages==1.14.4
-filelock==3.15.4
+Django==3.0.5
+django-storages==1.9.1
+docutils==0.15.2
 gunicorn==20.0.4
 idna==2.10
-jmespath==1.0.1
+jmespath==0.10.0
+mysqlclient==2.2.1
 Pillow==7.1.1
-platformdirs==4.2.2
 psycopg2==2.8.5
 pycodestyle==2.9.1
+PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2019.3
 reportlab==3.5.42
 requests==2.24.0
-s3transfer==0.10.2
+s3transfer==0.3.7
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
-typing_extensions==4.12.2
-tzdata==2024.1
 urllib3==1.25.11
-virtualenv==20.26.3
 whitenoise==5.0.1
 XlsxWriter==1.4.1
