EVA-predesarrollo feat: Se agregan archivos de configuración de contraseñas.
Se agregan archivos de configuración de contraseñas al archivo ".gitignore" para evitar que se incluyan en el control de versiones.

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,7 @@ cython_debug/
 
 # Ignore Visual Studio Code Settings (.vscode)
 .vscode/
+
+# Ignore password files
+admin_django.txt
+db_password.txt
