EVA-predesarrollo refactor: Se actualiza el archivo ".gitignore" para excluir archivos de respaldo de MySQL Workbench y otros directorios de respaldo en el control de versiones del proyecto.

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,11 @@ cython_debug/
 # Ignore password files
 users.txt
 database.txt
+
+# Ignore backup models files MySQL Workbench (.mwb.bak)
+*.mwb.bak
+
+# Ignore backup and others files
+/backup/
+/files/
+/others/
